feat(Problem5): getDenominationList 메소드를 구현한다
getDenominationList 메소드는 {50000, 10000, 5000, 1000, 500, 100, 50, 10, 1} 어레이 리스트 생성해 반환한다.